# mk-engine

./: CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt  Main.cpp
include/MK/: Core.hpp  Graphics.hpp
include/MK/Core/: Constants.hpp  Debug.hpp  File.hpp  Image.hpp  Input.hpp  Setup.hpp  Space.hpp
include/MK/Graphics/: Camera.hpp  Color.hpp  Objects.hpp  Render.hpp  Shapes.hpp  Window.hpp
resources/Shaders/: default.vert
src/: CMakeLists.txt  Core.cpp  Graphics.cpp
